--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="https://lampalab.github.io"><img src="{{site.baseurl}}/img/logos/logo_lampalab_small.png" alt="Lampa Lab"></a>
+        <a class="navbar-brand" href="https://lampalab.github.io">Відкрита лабораторія електроніки</a>
       </div> <!-- navbar-header -->
 
       <div class="navbar-collapse collapse">
