--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,8 +15,8 @@
       <div class="navbar-collapse collapse">
 
         <ul class="nav navbar-nav navbar-right">
-          <li class="{% if page.url == '/index.html' %}active{% endif %}"><a href="{{site.baseurl}}/index.html">Home</a></li>
-          <li class="{% if page.url == '/about_us.html' %}active{% endif %}"><a href="{{site.baseurl}}/about_us.html">About Us</a></li>
+          <li class="{% if page.url == '/index.html' %}active{% endif %}"><a href="{{site.baseurl}}/index.html">На головну</a></li>
+          <li class="{% if page.url == '/about_us.html' %}active{% endif %}"><a href="{{site.baseurl}}/about_us.html">Про нас</a></li>
 
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">What We Do <span class="caret"></span></a>
@@ -28,9 +28,9 @@
             </ul>
           </li>
 
-          <li class="{% if page.url == '/calendar.html' %}active{% endif %}"><a href="{{site.baseurl}}/calendar.html">Calendar</a></li>
+          <li class="{% if page.url == '/calendar.html' %}active{% endif %}"><a href="{{site.baseurl}}/calendar.html">Календар</a></li>
 
-          <li class="{% if page.url == '/blog.html' %}active{% endif %}"><a href="{{site.baseurl}}/blog.html">Blog</a></li>
+          <li class="{% if page.url == '/blog.html' %}active{% endif %}"><a href="{{site.baseurl}}/blog.html">Блог</a></li>
 
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Join Us <span class="caret"></span></a>
@@ -66,7 +66,7 @@
             </ul> <!-- dropdown-menu multi-level -->
           </li> <!-- dropdown -->
 
-          <li class="{% if page.url == '/contact.html' %}active{% endif %}"><a href="{{site.baseurl}}/contact.html">Contact</a></li>
+          <li class="{% if page.url == '/contact.html' %}active{% endif %}"><a href="{{site.baseurl}}/contact.html">Контакти</a></li>
         </ul><!-- nav navbar-nav navbar-right -->
       </div><!-- navbar-collapse collapse -->
 
