--- a/css/custom.css
+++ b/css/custom.css
@@ -803,12 +803,12 @@ iframe {
 }
 
 .carousel-caption li a:link{
-    color: white;
+    color: #ffcc05;
 
 }
 
 .carousel-caption .fa {
-	color: white;
+	color: #ffcc05;
 }
 
 
