--- a/css/custom.css
+++ b/css/custom.css
@@ -792,7 +792,7 @@ iframe {
     bottom: 50px;
     font-size: 1.4em;
     text-shadow: none;
-    color: white;
+    color: #ffcc05;
 }
 
 .carousel-caption li{
