--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@
       <div class="navbar-collapse collapse">
 
         <ul class="nav navbar-nav navbar-right">
-          <li class="{% if page.url == '/index.html' %}active{% endif %}"><a href="{{site.baseurl}}/index.html">На головну</a></li>
+          <li class="{% if page.url == '/index.html' %}active{% endif %}"><a href="{{site.baseurl}}/index.html">Головна</a></li>
           <li class="{% if page.url == '/about_us.html' %}active{% endif %}"><a href="{{site.baseurl}}/about_us.html">Про нас</a></li>
 	  <li class="{% if page.url == '/about_us.html' %}active{% endif %}"><a href="{{site.baseurl}}/about_us.html">Обладнання</a></li>
 	  <li class="{% if page.url == '/about_us.html' %}active{% endif %}"><a href="{{site.baseurl}}/about_us.html">Проекти</a></li>
