--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -23,6 +23,8 @@
 
           <li class="{% if page.url == '/blog.html' %}active{% endif %}"><a href="{{site.baseurl}}/blog.html">Блог</a></li>
 
+          <li class="{% if page.url == '/about_us.html' %}active{% endif %}"><a href="{{site.baseurl}}/about_us.html">Партнери</a></li>
+
           <li class="{% if page.url == '/contact.html' %}active{% endif %}"><a href="{{site.baseurl}}/contact.html">Контакти</a></li>
         </ul><!-- nav navbar-nav navbar-right -->
       </div><!-- navbar-collapse collapse -->
