--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,6 +10,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+        <a class="navbar-brand" href="http://fablabbcn.org/"><img src="{{site.baseurl}}/img/logos/small_logo.png" alt="Lampa Lab"></a>
       </div> <!-- navbar-header -->
       <div class="navbar-collapse collapse">
 
@@ -30,8 +31,6 @@
           <li class="{% if page.url == '/calendar.html' %}active{% endif %}"><a href="{{site.baseurl}}/calendar.html">Календар</a></li>
 
           <li class="{% if page.url == '/blog.html' %}active{% endif %}"><a href="{{site.baseurl}}/blog.html">Блог</a></li>
-
-          <li class="{% if page.url == '/about_us.html' %}active{% endif %}"><a href="{{site.baseurl}}/about_us.html">Партнери</a></li>
 
           <li class="{% if page.url == '/contact.html' %}active{% endif %}"><a href="{{site.baseurl}}/contact.html">Контакти</a></li>
         </ul><!-- nav navbar-nav navbar-right -->
