--- a/css/custom.css
+++ b/css/custom.css
@@ -847,7 +847,7 @@ iframe {
 @media (min-width: 240px) and (max-width: 660px) { 
 	
 	
-	#carousel-container {
+/*	#carousel-container {
 	padding-top: 40px;
 	margin-bottom: 20px;
 	height: 350px;
@@ -882,7 +882,7 @@ iframe {
 
 #job-openings .col-md-6 {
 	padding: 0px 20px 0px 20px;
-}
+}*/
 
 	
 }
