--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,7 +21,7 @@
 	  <li class="{% if page.url == '/about_us.html' %}active{% endif %}"><a href="{{site.baseurl}}/about_us.html">Проекти</a></li>
 
           <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Навчальні матеріали<span class="caret"></span></a>
+            <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Навчання<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li class="{% if page.url == '/workshops.html' %}active{% endif %}"><a href="{{site.baseurl}}/events.html">Workshops</a></li>
               <li class="{% if page.url == '/projects.html' %}active{% endif %}"><a href="{{site.baseurl}}/projects.html">Projects</a></li>
