--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
     <div class="row">
 
       <div class="col-md-3 col-sm-2" id="collaborations-text">
-        <h2>Наші спонсори</h2>
+        <h2>Cпонсори</h2>
         <br>
       </div> <!-- col -->
 
@@ -43,6 +43,6 @@
 
 <section id="footer">
   <div style="font-size: 1.19em;" class="container">
-    <p style="padding:10px"> Created by <strong>Lampa Lab Team</strong> (c) 2018</p>
+    <p style="padding:10px"> Created by <strong>Lampa Lab</strong> (c) 2018</p>
   </div> <!--container-->
 </section> <!--footer-->
