--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,16 +7,11 @@
 <section id="collaborations">
   <div class="container">
     <div class="row">
-
-      <div class="col-md-3 col-sm-2" id="collaborations-text">
-        <h2>Cпонсори</h2>
-        <br>
-      </div> <!-- col -->
-
-      <div class="col-md-1 col-sm-1 col-xs-1"></div>
-
       <div class="col-md-7 col-sm-9 col-xs-12">
         <div class="row">
+          <div class="col-md-3 col-sm-3 col-xs-6" >
+            <h2>Cпонсори</h2>
+          </div>
           <div class="col-md-3 col-sm-3 col-xs-6" >
             <a target="_blank" href="https://www.melexis.com/"><img src="{{site.baseurl}}/img/collaborations/melexis_logo.png"/></a>
           </div>
