--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
     <div class="row">
 
       <div class="col-md-3 col-sm-2" id="collaborations-text">
-        <h2>Collaborators</h2>
+        <h2>Спонсори</h2>
         <br>
       </div> <!-- col -->
 
