--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,6 +25,17 @@
           </div>
         </div> <!-- row -->
 
+        <hr>
+
+        <div class="row">
+          <div class="col-md-2 col-sm-2 col-xs-6" >
+            <a target="_blank" href="https://www.globallogic.com/"><img src="{{site.baseurl}}/img/collaborations/globallogic_logo.png"/></a>
+          </div>
+          <div class="col-md-2 col-sm-2 col-xs-6" >
+            <a target="_blank" href="https://sirinsoftware.com/"><img src="{{site.baseurl}}/img/collaborations/sirinsoftware_logo.png"/></a>
+          </div>
+        </div>
+
       </div> <!-- col -->
     </div> <!-- row -->
 
