--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,6 +23,9 @@
           <div class="col-md-3 col-sm-3 col-xs-6" >
             <a target="_blank" href="https://evocom.ua/"><img src="{{site.baseurl}}/img/collaborations/evocom_logo.png"/></a>
           </div>
+          <div class="col-md-3 col-sm-3 col-xs-6" >
+            <a target="_blank" href="https://www.rohde-schwarz.com/"><img src="{{site.baseurl}}/img/collaborations/rohde_und_schwarz_logo.png"/></a>
+          </div>
         </div> <!-- row -->
 
         <hr>
