--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,7 @@
             <a target="_blank" href="https://evocom.ua/"><img src="{{site.baseurl}}/img/collaborations/evocom_logo.png"/></a>
           </div>
           <div class="col-md-2 col-sm-2 col-xs-6" >
-            <a target="_blank" href="https://www.rohde-schwarz.com/"><img src="{{site.baseurl}}/img/collaborations/rohde_und_schwarz_logo.gif"/></a>
+            <a target="_blank" href="https://www.rohde-schwarz.com/"><img src="{{site.baseurl}}/img/collaborations/rohde_und_schwarz_logo.png"/></a>
           </div>
         </div>
       
