--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,7 +21,7 @@
             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Про нас<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li class="{% if page.url == '/about_us.html' %}active{% endif %}"><a href="{{site.baseurl}}/about_us.html">Про лабораторію</a></li>
-              <li><a href="https://www.facebook.com/lampa.kpi/photos/a.1581441292114753.1073741829.1579493785642837/1640509106207971/?type=3&theater">Звіт за 2015 рік</a></li>
+              <li><a href="https://www.facebook.com/lampa.kpi/photos/a.1581441292114753.1073741829.1579493785642837/1640509106207971/?type=3&theater" target="_blank">Звіт за 2015 рік</a></li>
             </ul>
           </li>
 
