--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -27,14 +27,14 @@
             </ul>
           </li>
 
-	  <li class="{% if page.url == '/about_us.html' %}active{% endif %}"><a href="{{site.baseurl}}/about_us.html">Обладнання</a></li>
-	  <li class="{% if page.url == '/about_us.html' %}active{% endif %}"><a href="{{site.baseurl}}/about_us.html">Проекти</a></li>
+	  <li class="{% if page.url == '/equipment.html' %}active{% endif %}"><a href="{{site.baseurl}}/equipment.html">Обладнання</a></li>
+	  <li class="{% if page.url == '/projects.html' %}active{% endif %}"><a href="{{site.baseurl}}/projects.html">Проекти</a></li>
 
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Навчання<span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li class="{% if page.url == '/workshops.html' %}active{% endif %}"><a href="{{site.baseurl}}/events.html">Workshops</a></li>
-              <li class="{% if page.url == '/projects.html' %}active{% endif %}"><a href="{{site.baseurl}}/projects.html">Projects</a></li>
+              <li class="{% if page.url == '/basics.html' %}active{% endif %}"><a href="{{site.baseurl}}/basics.html">Основи електроніки</a></li>
+              <li class="{% if page.url == '/digital_design.html' %}active{% endif %}"><a href="{{site.baseurl}}/digital_design.html">Цифровий дизайн</a></li>
             </ul>
           </li>
 
