--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Open Hardware Laboratory Lampa</title>
 
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
 
     <!-- Bootstrap -->
     <link href="{{site.baseurl}}/css/bootstrap.min.css" rel="stylesheet" >
