--- a/_layouts/blog_post.html
+++ b/_layouts/blog_post.html
@@ -46,6 +46,7 @@ layout: default
         <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
       </div>  <!-- col -->
 
+      <div class="col-md-4">
         <div class="well">
           <h4>Теги:</h4>
           <div class="row">
