--- a/_layouts/blog_post.html
+++ b/_layouts/blog_post.html
@@ -24,7 +24,7 @@ layout: default
       <div class="col-md-8">
         <h1>{{page.title}}</h1>
 
-        <p class="lead">by&nbsp;<u>{{page.author}}</u>&nbsp;&nbsp;&nbsp;<span class="glyphicon glyphicon-time"></span> Posted on <u>{{ page.date | date:"%B %d, %Y" }}</u></p>
+        <p class="lead">Автор&nbsp;<u>{{page.author}}</u>&nbsp;&nbsp;&nbsp;<span class="glyphicon glyphicon-time"></span> Опубліковано <u>{{ page.date | date:"%B %d, %Y" }}</u></p>
 
         {{content}}
 
