--- a/_layouts/blog_post.html
+++ b/_layouts/blog_post.html
@@ -48,12 +48,12 @@ layout: default
 
       <div class="col-md-4">
         <div class="well">
-          <h4>Теги:</h4>
+          <h4>Теги</h4>
           <div class="row">
             {% for c in site.categories %}
             <div class="col-lg-6">
               <ul class="list-unstyled">
-                <li><a href="/tag/{{c | first}}/">{{ c | first }}</a>
+                <li><a href="/tag/{{c | first}}">{{ c | first }}</a>
                 </li>
               </ul>
             </div>
@@ -65,7 +65,7 @@ layout: default
         <!-- Blog Social Well -->
 
         <div class="well">
-          <h4>Поділитися:</h4>
+          <h4>Поділитися</h4>
           <br>
           <span class='st_facebook_large' displayText='Facebook'></span>
           <span class='st_twitter_large' displayText='Tweet'></span>
