--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -24,7 +24,8 @@ layout: default
       <div class="post">
       <h1>Тег: {{ page.tag }}</h1>
       <ul>
-        {% for category in site.categories.[page.tag] %}
+        {% assign posts = site.categories[page.tag] %}
+        {% for post in posts %}
           <li><a href="{{ post.url }}">{{ post.title }}</a> ({{ post.date | date_to_string }})<br>
           {{ post.description }}
           </li>
