--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -38,4 +38,6 @@ layout: default
   </div> <!-- container -->
 </section>
 
+<div class="container" id="separator"></div>
+
 {% include footer.html %}
