--- a/_layouts/project_post.html
+++ b/_layouts/project_post.html
@@ -33,7 +33,7 @@ layout: default
     <section id="header-pages-blog">
 	    <div class="container" id="header-pages-blog-title">
             
-            <a href="http://lampalab.github.io/projects.html"> <h2 class="page-title">Projects</h2> </a>                     
+            <h2 class="page-title">Проекти</h2>                     
 							
 	    </div> <!-- container -->								        	        	                  	      	                     	            	            		                  			   		   	  		                                                                                          
     </section> <!-- hero -->
@@ -55,7 +55,7 @@ layout: default
 				    <h2>{{page.title}}</h2>
 	                
 	                {% if page.author %} 	            	            
-					    <p class="lead">by <a href="#">{{page.author}}</a></p>
+					    <p class="lead">Автор &nbsp;<u>{{page.author}}</u>&nbsp;</p>
 			    	{% endif %}
 
 	                {% if page.url and page.niceurl %} 	            	            
