--- a/_layouts/education.html
+++ b/_layouts/education.html
@@ -18,7 +18,7 @@ layout: default
 
 <div class="container" id="separator-pages-top"></div>
 
-<section id="education">
+<section id="project-post">
   <div class="container">
 
     {{content}}
