--- a/_layouts/education.html
+++ b/_layouts/education.html
@@ -19,7 +19,7 @@ layout: default
 <div class="container" id="separator-pages-top"></div>
 
 <section id="project-post">
-  <div class="container">
+  <div class="container" id="project-body">
 
     {{content}}
 
