--- a/css/custom.css
+++ b/css/custom.css
@@ -1103,7 +1103,7 @@ iframe {
 }
 
 #project-body  h1, #project-body  h2, #project-body  h3 {
-	color: #3d3d3d !important;
+	color: #4A90BD !important;
 	background: none !important;
 
 }
