--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -32,7 +32,7 @@
             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Обладнання<span class="caret"></span></a>
             <ul class="dropdown-menu">
 	      <li class="{% if page.url == '/equipment.html' %}active{% endif %}"><a href="{{site.baseurl}}/equipment.html">Обладнання лабораторії</a></li>
-              <li><a href="https://telegra.ph/3D-druk-v-Lampі-03-29/" target="_blank">Інструкція по 3D друку</a></li>
+              <li><a href="https://telegra.ph/3D-druk-v-Lampі-03-29" target="_blank">Інструкція по 3D друку</a></li>
             </ul>
           </li>   
 
