--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -43,6 +43,6 @@
 
 <section id="footer">
   <div style="font-size: 1.0em;" class="container">
-    <p style="padding:10px"> Created by <strong>Lampa Lab</strong> (c) 2018</p>
+    <p style="padding:10px"> Created by <strong>Lampa Lab</strong> (c) 2018-2019</p>
   </div> <!--container-->
 </section> <!--footer-->
