--- a/_layouts/project_post.html
+++ b/_layouts/project_post.html
@@ -52,7 +52,7 @@ layout: default
     <section id="project-post">
 	    <div class="container" id="project-body">
 		    	    
-				    <h1>{{page.title}}</h1>
+				    <h2>{{page.title}}</h2>
 	                
 	                {% if page.author %} 	            	            
 					    <p class="lead">Автор &nbsp;<u>{{page.author}}</u>&nbsp;</p>
@@ -68,7 +68,26 @@ layout: default
 				    <p class="claim">{{page.meta}}</p> 
 		   			    			    
 				    
-				    {{content}}					     					    			    		     		    		    
+				    {{content}}	
+
+                                    <br>
+                                    <hr id="hr-comments">
+
+                                    <div id="disqus_thread"></div>
+                                      <script type="text/javascript">
+                                        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+                                        var disqus_shortname = 'lampalab'; // required: replace example with your forum shortname
+
+                                        /* * * DON'T EDIT BELOW THIS LINE * * */
+                                        (function() {
+                                          var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                                          dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                                          (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                                        })();
+                                      </script>
+                                      <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                                    </div>  <!-- col -->	
+			     					    			    		     		    		    
 	    </div> <!-- container -->
 	    
     </section> <!-- project-post -->
@@ -79,7 +98,23 @@ layout: default
 
 <!-- =============================================================================================================-->
 
+<!-- disqus -->
+
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+  /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+  var disqus_shortname = 'lampalab'; // required: replace example with your forum shortname
+
+  /* * * DON'T EDIT BELOW THIS LINE * * */
+  (function() {
+    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+    dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+  })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+
+<!-- disqus -------------------------------------->
 
 {% include footer.html %}         
-
- 
