--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,6 +33,9 @@
           <div class="col-md-2 col-sm-2 col-xs-6" >
             <a target="_blank" href="https://www.rohde-schwarz.com/"><img src="{{site.baseurl}}/img/collaborations/rohde_und_schwarz_logo.png"/></a>
           </div>
+          <div class="col-md-2 col-sm-2 col-xs-6" >
+            <a target="_blank" href="https://gb.kyivcity.gov.ua/projects/archive/1/show/336"><img src="{{site.baseurl}}/img/collaborations/gb.png"/></a>
+          </div>
         </div>
       
       </div> <!-- col -->
