--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
     <div class="row">
 
       <div class="col-md-3 col-sm-2" id="collaborations-text">
-        <h2>Наші спонсори</h2>
+        <h2>Партнери</h2>
         <br>
       </div> <!-- col -->
 
