--- a/_layouts/media.html
+++ b/_layouts/media.html
@@ -9,7 +9,7 @@ layout: default
 <section id="header-pages-blog">
   <div class="container" id="header-pages-blog-title">
 
-    <h2 class="page-title">Матеріали в медіа</h2>
+    <h2 class="page-title">Публікації</h2>
 
   </div>
 </section> <!-- hero -->
