--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -43,6 +43,8 @@
 
           <li class="{% if page.url == '/calendar.html' %}active{% endif %}"><a href="{{site.baseurl}}/calendar.html">Календар</a></li>
 
+          <li class="{% if page.url == '/donate.html' %}active{% endif %}"><a href="{{site.baseurl}}/donate.html">Підтримати</a></li>
+
           <li class="{% if page.url == '/blog.html' %}active{% endif %}"><a href="{{site.baseurl}}/blog.html">Блог</a></li>
 
           <li class="{% if page.url == '/contact.html' %}active{% endif %}"><a href="{{site.baseurl}}/contact.html">Контакти</a></li>
