--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -48,10 +48,10 @@
             <li class="dropdown-submenu">
                 <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Наші відео курси<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a tabindex="-1"><a href="https://www.youtube.com/playlist?list=PL4WQQHlheqfxlBAVy_BCNDcU_HoHczyjk" target="_blank">Аналогова схемотехніка</a></li>
-                  <li><a tabindex="-1"><a href="https://www.youtube.com/playlist?list=PL4WQQHlheqfzl71QHEBzrB_dRLF1fI7wz" target="_blank">Цифрова схемотехніка</a></li>
-                  <li><a tabindex="-1"><a href="https://www.youtube.com/playlist?list=PL4WQQHlheqfyIZSzsJXqs6kBQhhsTRBC7" target="_blank">Verilog і проектування мікросхем</a></li>
-                  <li><a tabindex="-1"><a href="https://www.youtube.com/watch?v=judSW9LMxA4&list=PL4WQQHlheqfw03rsLoyDuHK2JoD5F_G0Z" target="_blank">Воркшопи з IoT на базі ESP8266</a></li>
+                  <li><a tabindex="-1"><a href="https://www.youtube.com/playlist?list=PL4WQQHlheqfxlBAVy_BCNDcU_HoHczyjk" target="_blank">Схемотехніка Аналог.</a></li>
+                  <li><a tabindex="-1"><a href="https://www.youtube.com/playlist?list=PL4WQQHlheqfzl71QHEBzrB_dRLF1fI7wz" target="_blank">Схемотехніка Цифр.</a></li>
+                  <li><a tabindex="-1"><a href="https://www.youtube.com/playlist?list=PL4WQQHlheqfyIZSzsJXqs6kBQhhsTRBC7" target="_blank">Verilog</a></li>
+                  <li><a tabindex="-1"><a href="https://www.youtube.com/watch?v=judSW9LMxA4&list=PL4WQQHlheqfw03rsLoyDuHK2JoD5F_G0Z" target="_blank">Воркшопи з IoT</a></li>
                 </ul> <!-- dropdown-menu-->
             </li> <!-- dropdown-submenu -->
 
