--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -57,6 +57,8 @@
 
             </ul> <!-- dropdown-menu multi-level -->
           </li> <!-- dropdown -->
+          
+          <li class="{% if page.url == '/events.html' %}active{% endif %}"><a href="{{site.baseurl}}/events.html">Заходи</a></li>
 
           <li class="{% if page.url == '/calendar.html' %}active{% endif %}"><a href="{{site.baseurl}}/calendar.html">Календар</a></li>
 
