--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,6 +10,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+        <a class="navbar-brand" href="https://lampa.kpi.ua/"><img src="{{site.baseurl}}/img/logos/small_logo.png" alt="Lampa Lab"></a>
       </div> <!-- navbar-header -->
       <div class="navbar-collapse collapse">
 
