--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -40,7 +40,7 @@
 	  <li class="{% if page.url == '/projects.html' %}active{% endif %}"><a href="{{site.baseurl}}/projects.html">Проекти</a></li>
 
           <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Навчання<span class="caret"></span></a>
+            <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Освіта<span class="caret"></span></a>
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
 
             <li> <a tabindex="-1" href="{{site.baseurl}}/education.html">Навчальні матеріали</a></li> <!-- dropdown-submenu -->
@@ -58,7 +58,7 @@
             </ul> <!-- dropdown-menu multi-level -->
           </li> <!-- dropdown -->
           
-          <!-- <li class="{% if page.url == '/events.html' %}active{% endif %}"><a href="{{site.baseurl}}/events.html">Заходи</a></li> -->
+          <li class="{% if page.url == '/events.html' %}active{% endif %}"><a href="{{site.baseurl}}/events.html">Заходи</a></li>
 
           <li class="{% if page.url == '/calendar.html' %}active{% endif %}"><a href="{{site.baseurl}}/calendar.html">Календар</a></li>
 
