--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -34,6 +34,7 @@
             <ul class="dropdown-menu">
 	      <li class="{% if page.url == '/equipment.html' %}active{% endif %}"><a href="{{site.baseurl}}/equipment.html">Обладнання лабораторії</a></li>
               <li class="{% if page.url == '/3dprint.html' %}active{% endif %}"><a href="{{site.baseurl}}/3dprint.html">Інструкція з 3D друку</a></li>
+              <li class="{% if page.url == '/calendar.html' %}active{% endif %}"><a href="{{site.baseurl}}/calendar.html">Календар 3D друку</a></li>
             </ul>
           </li>   
 
@@ -57,14 +58,8 @@
 
             </ul> <!-- dropdown-menu multi-level -->
           </li> <!-- dropdown -->
-          
-          <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Заходи<span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li class="{% if page.url == '/events.html' %}active{% endif %}"><a href="{{site.baseurl}}/events.html">Проведені заходи</a></li>
-              <li class="{% if page.url == '/calendar.html' %}active{% endif %}"><a href="{{site.baseurl}}/calendar.html">Календар</a></li>
-            </ul>
-          </li>
+
+          <li class="{% if page.url == '/events.html' %}active{% endif %}"><a href="{{site.baseurl}}/events.html">Заходи</a></li>
 
           <li class="{% if page.url == '/donate.html' %}active{% endif %}"><a href="{{site.baseurl}}/donate.html">Підтримати</a></li>
 
