--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -47,7 +47,7 @@
             <li> <a tabindex="-1" href="{{site.baseurl}}/education.html">Навчальні матеріали</a></li> <!-- dropdown-submenu -->
             
             <li class="dropdown-submenu">
-                <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Наші відео курси<span class="caret"></span></a>
+                <a tabindex="-1" href="#">Наші відео курси</a>
                 <ul class="dropdown-menu">
                   <li><a tabindex="-1"><a href="https://www.youtube.com/playlist?list=PL4WQQHlheqfxlBAVy_BCNDcU_HoHczyjk" target="_blank">Аналогові схеми</a></li> 
                   <li><a tabindex="-1"><a href="https://www.youtube.com/playlist?list=PL4WQQHlheqfzl71QHEBzrB_dRLF1fI7wz" target="_blank">Цифрові схеми</a></li>
