--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -57,6 +57,8 @@
                   <li><a tabindex="-1"><a href="https://www.youtube.com/watch?v=judSW9LMxA4&list=PL4WQQHlheqfw03rsLoyDuHK2JoD5F_G0Z" target="_blank">Воркшопи з IoT</a></li>
                 </ul> <!-- dropdown-menu-->
             </li> <!-- dropdown-submenu -->
+            
+            <li> <a href="https://www.facebook.com/lampa.kids" target="_blank">Дитяча школа</a></li> <!-- dropdown-submenu -->
 
             </ul> <!-- dropdown-menu multi-level -->
           </li> <!-- dropdown -->
