--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,14 +15,14 @@
       <div class="navbar-collapse collapse">
 
         <ul class="nav navbar-nav navbar-right">
-          <li class="{% if page.url == '/index.html' %}active{% endif %}"><a href="{{site.baseurl}}/index.html">Головна</a></li>
+          <li class="{% if page.url == '/' %}active{% endif %}"><a href="{{site.baseurl}}/">Головна</a></li>
 
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Про нас<span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li class="{% if page.url == '/about_us.html' %}active{% endif %}"><a href="{{site.baseurl}}/about_us.html">Про лабораторію</a></li>
-              <li class="{% if page.url == '/gallery.html' %}active{% endif %}"><a href="{{site.baseurl}}/gallery.html">Фото галерея</a></li>
-              <li class="{% if page.url == '/media.html' %}active{% endif %}"><a href="{{site.baseurl}}/media.html">ЗМІ про нас</a></li>
+              <li class="{% if page.url == '/about/' %}active{% endif %}"><a href="{{site.baseurl}}/about/">Про лабораторію</a></li>
+              <li class="{% if page.url == '/gallery/' %}active{% endif %}"><a href="{{site.baseurl}}/gallery/">Фото галерея</a></li>
+              <li class="{% if page.url == '/media/' %}active{% endif %}"><a href="{{site.baseurl}}/media/">ЗМІ про нас</a></li>
               <li><a href="https://www.facebook.com/lampa.kpi/photos/a.1581441292114753.1073741829.1579493785642837/1640509106207971/?type=3&theater" target="_blank">Звіт за 2015 рік</a></li>
               <li><a href="https://www.facebook.com/lampa.kpi/photos/a.1581441292114753.1073741829.1579493785642837/1787629241495956/?type=3&theater" target="_blank">Звіт за 2016 рік</a></li>
               <li><a href="https://telegra.ph/Otchet-Lampy-za-2017-god-01-01" target="_blank">Звіт за 2017 рік</a></li>
@@ -32,21 +32,21 @@
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Обладнання<span class="caret"></span></a>
             <ul class="dropdown-menu">
-	      <li class="{% if page.url == '/equipment.html' %}active{% endif %}"><a href="{{site.baseurl}}/equipment.html">Обладнання лабораторії</a></li>
-              <li class="{% if page.url == '/3dprint.html' %}active{% endif %}"><a href="{{site.baseurl}}/3dprint.html">Інструкція з 3D друку</a></li>
-              <li class="{% if page.url == '/calendar.html' %}active{% endif %}"><a href="{{site.baseurl}}/calendar.html">Календар 3D друку</a></li>
+	      <li class="{% if page.url == '/equipment/' %}active{% endif %}"><a href="{{site.baseurl}}/equipment/">Обладнання лабораторії</a></li>
+              <li class="{% if page.url == '/3dprint/' %}active{% endif %}"><a href="{{site.baseurl}}/3dprint/">Інструкція з 3D друку</a></li>
+              <li class="{% if page.url == '/3dprint-calendar/' %}active{% endif %}"><a href="{{site.baseurl}}/3dprint-calendar/">Календар 3D друку</a></li>
             </ul>
           </li>   
 
-	  <li class="{% if page.url == '/projects.html' %}active{% endif %}"><a href="{{site.baseurl}}/projects.html">Проекти</a></li>
+	  <li class="{% if page.url == '/projects/' %}active{% endif %}"><a href="{{site.baseurl}}/projects/">Проекти</a></li>
 	  
-	  <li class="{% if page.url == '/events.html' %}active{% endif %}"><a href="{{site.baseurl}}/events.html">Заходи</a></li>
+	  <li class="{% if page.url == '/events/' %}active{% endif %}"><a href="{{site.baseurl}}/events/">Заходи</a></li>
 
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Навчання<span class="caret"></span></a>
             <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
 
-            <li> <a tabindex="-1" href="{{site.baseurl}}/education.html">Навчальні матеріали</a></li> <!-- dropdown-submenu -->
+            <li> <a tabindex="-1" href="{{site.baseurl}}/education/">Навчальні матеріали</a></li> <!-- dropdown-submenu -->
             
             <li class="dropdown-submenu">
                 <a tabindex="-1" href="#">Наші відео курси</a>
@@ -63,11 +63,11 @@
             </ul> <!-- dropdown-menu multi-level -->
           </li> <!-- dropdown -->
 
-          <li class="{% if page.url == '/donate.html' %}active{% endif %}"><a href="{{site.baseurl}}/donate.html">Підтримати</a></li>
+          <li class="{% if page.url == '/donate/' %}active{% endif %}"><a href="{{site.baseurl}}/donate/">Підтримати</a></li>
 
-          <li class="{% if page.url == '/blog.html' %}active{% endif %}"><a href="{{site.baseurl}}/blog.html">Блог</a></li>
+          <li class="{% if page.url == '/blog/' %}active{% endif %}"><a href="{{site.baseurl}}/blog/">Блог</a></li>
 
-          <li class="{% if page.url == '/contact.html' %}active{% endif %}"><a href="{{site.baseurl}}/contact.html">Контакти</a></li>
+          <li class="{% if page.url == '/contact/' %}active{% endif %}"><a href="{{site.baseurl}}/contact/">Контакти</a></li>
         </ul><!-- nav navbar-nav navbar-right -->
       </div><!-- navbar-collapse collapse -->
 
