--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -26,6 +26,7 @@
               <li><a href="https://www.facebook.com/lampa.kpi/photos/a.1581441292114753.1073741829.1579493785642837/1640509106207971/?type=3&theater" target="_blank">Звіт за 2015 рік</a></li>
               <li><a href="https://www.facebook.com/lampa.kpi/photos/a.1581441292114753.1073741829.1579493785642837/1787629241495956/?type=3&theater" target="_blank">Звіт за 2016 рік</a></li>
               <li><a href="https://telegra.ph/Otchet-Lampy-za-2017-god-01-01" target="_blank">Звіт за 2017 рік</a></li>
+              <li><a href="https://telegra.ph/Zv%D1%96t-Lampi-za-2019-r%D1%96k-12-31" target="_blank">Звіт за 2019 рік</a></li>
             </ul>
           </li>
 
