Renamed 3d print calendar to booking calendar

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -35,7 +35,7 @@
             <ul class="dropdown-menu">
 	      <li class="{% if page.url == '/equipment/' %}active{% endif %}"><a href="{{site.baseurl}}/equipment/">Обладнання лабораторії</a></li>
               <li class="{% if page.url == '/3dprint/' %}active{% endif %}"><a href="{{site.baseurl}}/3dprint/">Інструкція з 3D друку</a></li>
-              <li class="{% if page.url == '/3dprint-calendar/' %}active{% endif %}"><a href="{{site.baseurl}}/3dprint-calendar/">Календар 3D друку</a></li>
+              <li class="{% if page.url == '/3dprint-calendar/' %}active{% endif %}"><a href="{{site.baseurl}}/3dprint-calendar/">Календар резервування обладнання</a></li>
             </ul>
           </li>   
 
