--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -36,7 +36,7 @@
 	      <li class="{% if page.url == '/equipment/' %}active{% endif %}"><a href="{{site.baseurl}}/equipment/">Обладнання лабораторії</a></li>
               <li class="{% if page.url == '/3dprint/' %}active{% endif %}"><a href="{{site.baseurl}}/3dprint/">Інструкція з 3D друку</a></li>
               <li class="{% if page.url == '/booking/' %}active{% endif %}"><a href="{{site.baseurl}}/booking/">Інструкція з резервування обладнання</a></li>
-              <li class="{% if page.url == '/3dprint-calendar/' %}active{% endif %}"><a href="{{site.baseurl}}/3dprint-calendar/">Календар резервування обладнання</a></li>
+              <li class="{% if page.url == '/booking-calendar/' %}active{% endif %}"><a href="{{site.baseurl}}/booking-calendar/">Календар резервування обладнання</a></li>
             </ul>
           </li>   
 
