Added Ajax logo in partners (collaborations) section

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,6 +37,14 @@
             <a target="_blank" href="https://gb.kyivcity.gov.ua/projects/archive/1/show/336"><img src="{{site.baseurl}}/img/collaborations/gb.png"/></a>
           </div>
         </div>
+		
+		<hr>
+		
+		<div class="row">
+          <div class="col-md-3 col-sm-3 col-xs-6" >
+            <a target="_blank" href="https://ajax.systems/"><img src="{{site.baseurl}}/img/collaborations/ajax_logo.png"/></a>
+          </div>
+        </div>
       
       </div> <!-- col -->
     </div> <!-- row -->
